# cocina-dominicana-crawl_Dominican_LLM_project

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_DISCOVERY_FEATURE.md  MIGRATION-SUMMARY.md  Makefile  OVERVIEW.md  README.md  USAGE_EXAMPLES.md  cli.py  complete_culture_scraper_v2.py  config.py  config.yaml  config.yml  demo.py  install.sh  local-setup.md  main.py  models.py  process_to_plaintext.py  pyproject.toml  readme.markdown  requirements.txt  scraper.py  setup.py  urls  utils.py
config/: config.yml  urls.yml
core/: __init__.py  cli.py  config_loader.py  crawler.py  processor.py
firecrawl/: .gitignore  docker-compose.yml
notebooks/: 01_generate_metrics.py  02_metrics_eda.py  AGENT.md  eda.ipynb
scraped_content/: README.md  scraping_summary.json  scraping_summary_v2.json
scraped_content/comparaciones/: cocina-cubana-vs-dominicana.json  cocina-cubana-vs-dominicana.md  cocina-haitiana-vs-dominicana.json  cocina-haitiana-vs-dominicana.md  cocina-islas-caimanes-comida.json  cocina-islas-caimanes-comida.md  cocina-jamaica-vs-dominicana.json  cocina-jamaica-vs-dominicana.md  cocina-mexicana-vs-dominicana.json  cocina-mexicana-vs-dominicana.md  cocina-venezolana-vs-dominicana.json  cocina-venezolana-vs-dominicana.md  dominica-vs-republica-dominicana.json  dominica-vs-republica-dominicana.md  example-comparison.json  fusion-cultura-culinaria-dominicana.json  fusion-cultura-culinaria-dominicana.md
scraped_content/cultura_origenes/: aplatanado-volverse-dominicano.json  aplatanado-volverse-dominicano.md  bandera-dominicana-almuerzo.json  bandera-dominicana-almuerzo.md  bebidas-dominicanas.json  bebidas-dominicanas.md  buen-provecho-a-buen-tiempo.json  buen-provecho-a-buen-tiempo.md  carnaval-puntacana.json  carnaval-puntacana.md  colmado-dominicano.json  colmado-dominicano.md  comida-china-dominicana.json  comida-china-dominicana.md  comida-dominicana-calle.json  comida-dominicana-calle.md  comida-picante-dominicanos.json  comida-picante-dominicanos.md  comida-tipica-de-republica-dominicana.json  comida-tipica-de-republica-dominicana.md  comprar-productos-dominicanos-extranjero.json  comprar-productos-dominicanos-extranjero.md  cultura-comida-cocola.json  cultura-comida-cocola.md  cultura-platos-arabe-dominicanos.json  cultura-platos-arabe-dominicanos.md  datos-interesantes-republica-dominicana.json  datos-interesantes-republica-dominicana.md  dia-madres-republica-dominicana-tradiciones-regalos.json  dia-madres-republica-dominicana-tradiciones-regalos.md  dulces-dominicanos-colmados-carretera.json  dulces-dominicanos-colmados-carretera.md  example-culture.json  expresiones-refranes-alimentos.json  expresiones-refranes-alimentos.md  frutas-dominicanas.json  frutas-dominicanas.md  fusion-cultura-culinaria-dominicana.json  fusion-cultura-culinaria-dominicana.md  glosario.json  (+45 more)
scraped_content/festividades_celebraciones/: bebidas-navidenas-dominicanas.json  bebidas-navidenas-dominicanas.md  bebidas-resorts-todo-incluido-republica-dominicana.json  bebidas-resorts-todo-incluido-republica-dominicana.md  carnaval-puntacana.json  carnaval-puntacana.md  cumpleanos-dominicano-ideas-tradiciones.json  cumpleanos-dominicano-ideas-tradiciones.md  dia-madres-republica-dominicana-tradiciones-regalos.json  dia-madres-republica-dominicana-tradiciones-regalos.md  example-festivity.json  (+12 more)
scripts/: generate_comparison_pdf.py  remove_frontmatter.py  test_validation.sh  validate_refactoring.sh
sites/: README.md
templates/: processing_patterns.yml  site_config.yml
tests/: test_english_filter.py
(+95 files in other folders)
