[project]
name = "dominican-llm-scraper"
version = "0.2.0"
description = "Web scraper for collecting Dominican Spanish dialect data for LLM training"
readme = { file = "readme.markdown", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cristian de la Hoz" }]
keywords = [
  "web-scraping",
  "dominican-spanish",
  "llm-training-data",
  "dialect",
  "corpus-building",
  "nlp",
]

dependencies = [
  "firecrawl>=4.10.4",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "ruff>=0.14.9",
  "wordfreq>=3.1.1",
  "colorlog>=6.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project"
Repository = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project"
Issues = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project/issues"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
