[project]
name = "dominican-llm-scraper"
version = "0.2.0"
description = "Web scraper for collecting Dominican Spanish dialect data for LLM training"
readme = { file = "readme.markdown", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cristian de la Hoz" }]
keywords = [
  "web-scraping",
  "dominican-spanish",
  "llm-training-data",
  "dialect",
  "corpus-building",
  "nlp",
]

dependencies = [
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "playwright>=1.54.0",
  "ruff>=0.14.9",
  "wordfreq>=3.1.1",
  "colorlog>=6.8.2",
  "pandas>=2.3.3",
  "matplotlib>=3.9.4",
  "seaborn>=0.13.2",
  "scikit-learn>=1.6.1",
  "nltk>=3.9.2",
  "jupyter>=1.1.1",
  "ipykernel>=6.31.0",
  "firecrawl-py>=4.18.0",
  "reportlab>=4.4.10",
  "datasketch>=1.6.5",
  "chromadb>=1.0.20",
  "pip>=26.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/dominican_llm_scraper"]

[tool.hatch.build.targets.sdist]
include = ["src/dominican_llm_scraper", "readme.markdown", "config", "docs", "makefile"]

[project.urls]
Homepage = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project"
Repository = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project"
Issues = "https://github.com/lopezbec/cocina-dominicana-crawl_Dominican_LLM_project/issues"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
